--- a/back0/.cursor_ai_01.md
+++ b/back0/.cursor_ai_01.md
@@ -1,4 +1,4 @@
-# 根目录 C:\Users\xzz\Desktop\aaa
+# 根目录 D:\BBB\sys_back_vue\back0
 - 这是一个nestjs文章博客 https://blog.csdn.net/qq_40588441/article/details/150793358
 - 帮我联网阅读nestjs文章博客,并且自动写代码创建一个nestjs的项目
 - 我的orm要使用prisma,数据使用sqlite
