--- a/back1/.cursor_ai_01.md
+++ b/back1/.cursor_ai_01.md
@@ -14,4 +14,5 @@
 # 继续根据博客中的代码帮我完善代码(重点主要参开博客的代码)
 - 这是一个nestjs文章博客1 https://blog.csdn.net/qq_40588441/article/details/150793358
 - 这是一个nestjs文章博客2 https://blog.csdn.net/qq_40588441/article/details/150793358
+- 帮我联网阅读博客1,博客2,完善项目
 - 开始写代码
