--- a/back1/.cursor_ai_01.md
+++ b/back1/.cursor_ai_01.md
@@ -16,3 +16,9 @@
 - 这是一个nestjs文章博客2 https://blog.csdn.net/qq_40588441/article/details/150721729
 - 帮我联网阅读博客1,博客2,完善项目
 - 开始写代码
+
+
+# 继续根据博客中的代码帮我完善代码(重点集成nestjs-knife4j2)
+- 这是nestjs-knife4j2的仓库连接  https://github.com/jkhuangfu/nestjs-knife4j2
+- 帮我联网阅读连接将现在项目的文档改成nestjs-knife4j2
+- 开始写代码
