--- a/back1/.cursor_ai_01.md
+++ b/back1/.cursor_ai_01.md
@@ -22,3 +22,9 @@
 - 这是nestjs-knife4j2的仓库连接  https://github.com/jkhuangfu/nestjs-knife4j2
 - 帮我联网阅读连接将现在项目的文档改成nestjs-knife4j2
 - 开始写代码
+
+
+
+# 继续现在项目的代码完善代码
+- ApiResponse 帮我完善响应示例
+- 开始写代码
