--- a/.cursor_history.md
+++ b/.cursor_history.md
@@ -33,3 +33,59 @@
 
 ## 说明
 文件中的内容是累积增加的，每次会话都会追加新的记录。
+
+---
+
+## 会话主要目的
+清理 NestJS 认证模块中的 LocalStrategy 相关代码，简化认证系统架构。
+
+## 完成的主要任务
+1. 从 `auth.module.ts` 中移除 LocalStrategy 的导入和注册
+2. 从 `auth.controller.ts` 中移除 LocalAuthGuard 的导入
+3. 删除 `local.strategy.ts` 和 `local_auth.guard.ts` 文件
+
+## 关键决策和解决方案
+- 移除不再使用的 passport-local 策略相关代码
+- 保持 JWT 认证策略作为主要的认证方式
+- 简化认证模块的依赖关系
+
+## 使用的技术栈
+- TypeScript
+- NestJS
+- Passport JWT
+
+## 修改的文件
+1. `back1/src/modules/auth/auth.module.ts` - 移除 LocalStrategy 导入和注册
+2. `back1/src/modules/auth/auth.controller.ts` - 移除 LocalAuthGuard 导入
+3. `back1/src/modules/auth/strategies/local.strategy.ts` - 删除文件
+4. `back1/src/modules/auth/guards/local_auth.guard.ts` - 删除文件
+
+## 说明
+文件中的内容是累积增加的，每次会话都会追加新的记录。
+
+---
+
+## 会话主要目的
+简化代码库，移除未使用的 RolesGuard 和 Roles 装饰器功能。
+
+## 完成的主要任务
+1. 检查 RolesGuard 和 Roles 装饰器的使用情况
+2. 删除未使用的 `roles.guard.ts` 文件
+3. 删除未使用的 `roles.decorator.ts` 文件
+
+## 关键决策和解决方案
+- 通过代码搜索确认 RolesGuard 和 Roles 装饰器在项目中未被使用
+- 安全删除未使用的权限控制相关文件
+- 保持代码库的简洁性，移除冗余代码
+
+## 使用的技术栈
+- TypeScript
+- NestJS
+- 代码清理和重构
+
+## 修改的文件
+1. `back1/src/common/guards/roles.guard.ts` - 删除文件
+2. `back1/src/common/decorators/roles.decorator.ts` - 删除文件
+
+## 说明
+文件中的内容是累积增加的，每次会话都会追加新的记录。
