--- a/back1/.cursor_ai_01.md
+++ b/back1/.cursor_ai_01.md
@@ -34,3 +34,11 @@
 - ApiResponse 帮我完善响应示例
 - 开始写代码
 
+
+
+# 我的prisma/schema/auth中定义了rbac权限管理,但是我觉得缺少菜单对吗
+
+
+
+# 帮我在prisma/schema/auth增加菜单表,并且在user.ts中写接口
+
