--- a/.cursorrules.history.md
+++ b/.cursorrules.history.md
@@ -15,6 +15,29 @@
 - 说明：本文件内容累积追加，保留历史记录。
 
 - 日期：2025-09-30
+- 会话的主要目的：提供一键清理 Postgres 多容器与数据卷/绑定目录的命令。
+- 完成的主要任务：
+  - 给出在 compose 目录下的 `docker compose down -v` 与 `docker volume prune`、`docker rmi` 的清理方案。
+  - 对于绑定挂载 `../db_data/db_pg1..9`，提供跨平台（Linux/macOS、Windows PowerShell）删除目录指令。
+- 关键决策和解决方案：
+  - 若使用绑定挂载，`-v` 不会删除宿主机目录，需手动删除 `../db_data/db_pg*`。
+  - 可选执行 `docker system prune` 进行更彻底清理（谨慎使用）。
+- 使用的技术栈修改了哪些文件：
+  - 仅文档记录，未改动代码文件。
+- 说明：本文件内容累积追加，保留历史记录。
+
+- 日期：2025-09-30
+- 会话的主要目的：消除 `tb_test1` 重复定义，以 `schema.ts` 为准。
+- 完成的主要任务：
+  - 移除 `back4/src/db/index.ts` 中 `CREATE TABLE IF NOT EXISTS tb_test1` 的手写建表逻辑。
+  - 保留并依赖 `back4/src/db/schema.ts` 的表结构定义作为唯一数据源。
+- 关键决策和解决方案：
+  - 通过 Drizzle 的 `schema` 显式定义表结构，避免运行时手写 SQL 造成的漂移和重复。
+- 使用的技术栈修改了哪些文件：
+  - 修改：`back4/src/db/index.ts`
+- 说明：本文件内容累积追加，保留历史记录。
+
+- 日期：2025-09-30
 - 会话的主要目的：解决 Windows 下 libsql 原生模块加载失败（ERR_DLOPEN_FAILED），保证后端可启动。
 - 完成的主要任务：
   - 安装 `@libsql/client-wasm@0.15.15`。
